[package]
name = "anitsu"
author = "kenjitheman"
description = "CLI Anime Scheduler. All from the command line."
repository = "github.com/kenjitheman/anitsu"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
